Add JsonConverterService